--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -5,3 +5,6 @@ html
     link(rel='stylesheet', href='/styles/index.css')
   body
     block content
+
+    script(src='/scripts/index.js')
+    script(src='/scripts/another.js')
